[package]
name = "arbitrary-wrappers"
version = "0.1.0"
edition = "2018"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-std = { version = "0.3.0", default-features = false }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
zerok-macros = { git = "ssh://git@github.com/EspressoSystems/zerok-macros.git" }

[dev-dependencies]
bincode = "1.3.3"
