[package]
name = "arbitrary-wrappers"
version = "0.1.0"
edition = "2018"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-std = { version = "0.3.0", default-features = false }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", rev = "25b924b09c6fc26c1fda483020da1aceac8ace19" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
zerok-macros = { git = "https://github.com/EspressoSystems/zerok-macros.git" }

[dev-dependencies]
bincode = "1.3.3"
