[package]
name = "arbitrary-wrappers"
version = "0.3.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-std = { version = "0.4.0", default-features = false }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git", tag = "0.1.0" }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
